--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
                  <li><a href="#">GitHub</a></li>
              </ul>
          </div>
+         <span id="cp"> It's a copy of a portfolion from <a href="https://moshiur.dev/projects/cuda/">Moshiur sir</a></span>
      </footer>
      
      <!-- END FOOTER SECTIONS --> 
